[BUGFIX] EM: improve action icons alignment
In both extensions list of the new EM (available and import), the
action icons are flush with the top of each table row. Instead
they should be aligned with the extension icon.

Fixes: #36611
Releases: 6.0, 4.7, 4.6, 4.5

--- a/typo3/sysext/em/res/css/t3_em.css
+++ b/typo3/sysext/em/res/css/t3_em.css
@@ -283,6 +283,10 @@ a.email {
 	margin-right: 5px;
 }
 
+.x-action-col-cell img {
+	margin-top: 3px;
+}
+
 .paddingNoActionIcon img {
 	margin-right: 20px;
 }
